CLJ-2492 Fix use of deprecated Class.newInstance() method
Signed-off-by: Stuart Halloway <stu@cognitect.com>